# habitat-sim-data-generator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  animate_path.py  bench_raycast.py  config.yaml  config_stream.yaml  convert_ply_to_map.py  generate_data.py  pyproject.toml  read_mcap.py  stream_data.py  visualize_mcap_rerun.py
assets/robots/: cylinder_robot.urdf  sensors.yaml
config/: config_stream.yaml  sensors.yaml
scripts/: animate_path.py  bench_raycast.py  read_mcap.py  verify_bbox.py  visualize_bbox.py  visualize_mcap_rerun.py
src/: robot.py  robot_config.py  runtime_config.py  scene.py
src/datatypes/: __init__.py  bbox.py  image.py  imu.py  laser_scan.py  map.py  motion_state.py  observation.py  point_cloud.py  pose.py  waypoint.py
src/detections/: __init__.py  bbox2d.py  bbox3d.py  categories.py  obb.py
src/pipeline/: __init__.py  mcap_sink.py  sink.py  streaming.py
src/planners/: __init__.py  (+7 more)
tests/: robot_fixtures.py  run_test.py  test_bbox.py  test_camera_model_factory.py  test_camera_sensor.py  test_collision_occupancy.py  test_geometry_utils.py  test_global_planner.py  test_imports.py  test_imu_sensor.py  test_instance_identity.py  test_io.py  test_laser.py  test_laser2d_sensor.py  test_lidar.py  test_local_planner.py  test_map.py  test_mcap_export.py  test_planner.py  test_planner_registry.py  test_raycast_postproc.py  test_refactoring.py  test_robot.py  test_robot_config.py  test_runtime_config.py  test_scene_extractor_articulated.py  test_scene_markers.py  test_sensor_suite.py  test_streaming_pipeline.py  test_visualization.py
(+58 files in other folders)
