[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habitat-data-generation"
version = "0.1.0"
description = "Habitat 3D Simulator Data Generation Pipeline with ZigZag path planner and Rerun visualization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pyyaml>=6.0.0",
    "mcap>=1.4.0",
    "mcap-ros2-support>=0.5.7",
    "rerun-sdk>=0.21.0",
    "trimesh>=4.0.0",
    "pillow>=10.0.0",
    "matplotlib>=3.10.9",
    "habitat-sim",
    "scipy>=1.15.3",
]

[tool.uv.sources]
habitat-sim = { path = "habitat-sim" }
